fixed some overflow issues

--- a/style.css
+++ b/style.css
@@ -54,7 +54,9 @@ header {
 
 #searchbox {
     background-color: white;
+    margin-top: 2px;
     padding-top: 15px;
+    padding-bottom: 15px;
     border-radius: 15px;
 }
 
@@ -99,10 +101,11 @@ header {
 
 .results {
     background-color: white;
-    /* min-height: 570px; */
-    min-height: 100%;
+    min-height: 585px;
     border-radius: 15px;
     margin: auto;
+    margin-right: 50px;
+    margin-top: 2px;
 }
 
 .recipe {
